# ocaml-devcontainer

./: .gitignore  .gitmodules  .ocamlformat  Makefile  Makefile.ffi  Makefile.show  README.md  caml_runtime_allocator.c  caml_runtime_allocator.h  configure-target.sh  dune  dune-workspace  main.ml  main_app.c
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/features/apt-packages/: devcontainer-feature.json  install.sh
.devcontainer/features/musl-cross/: devcontainer-feature.json  install.sh
.devcontainer/ocaml-devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  images.yml  ocaml-versions.yml
df/: df.ml  dune  types.ml  types.mli
lib/bindings/: Makefile  dune  function_description.ml  pjrt.c  pjrt.h  type_description.ml  type_description_base.ml  type_description_buffer.ml  type_description_client.ml  type_description_device.ml  type_description_events.ml  types.ml
lib/bindings/base/: dune  type_description.ml  types.ml
src/: dune  ffi_c.c  ffi_c.h  ffi_c_caml.c  ffi_test.ml  range_solver.ml  test.ml
